--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Introducción
-En este documento trabajaremos para explorar la identidad de plantas que se encuentran extintas en silvestría o totalmente extintas según la IUCN
+En este documento trabajaremos para explorar la identidad de plantas que se encuentran extintas en silvestría o totalmente extintas según la [IUCN](https://www.iucnredlist.org/)
 
 ## Subtítulo
 
